# holocubic-cli

./: .gitattributes  .gitignore  README.md  README.zh-CN.md
.github/workflows/: ci-conformance.yml  ci-node.yml  ci-python.yml  ci-rust.yml  publish-node.yml  publish-python.yml  publish-rust.yml
docs/: RELEASING.md
implementations/node/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
implementations/node/docs/: RELEASE_CHECKLIST.md  TEST_PLAN.md  TEST_RESULTS.md
implementations/node/scripts/: e2e-device.mjs  verify-package.mjs
implementations/node/src/: app.ts  cli.ts  client.ts  config.ts  errors.ts  index.ts  remote-path.ts  transfer.ts  transport.ts  types.ts  url.ts
implementations/node/test/: app.test.ts  cli.test.ts  client.test.ts  config.test.ts  remote-path.test.ts  url.test.ts  (+1 more)
implementations/python/: README.md  pyproject.toml
implementations/python/src/holocubic_cli_python/: __init__.py  app.py  cli.py  client.py  config.py  errors.py  models.py  remote_path.py  transfer.py  transport.py  url.py
implementations/python/tests/: mock_devtools.py  test_app.py  test_cli.py  test_client.py  test_config.py  test_remote_path.py  test_transfer.py  test_url.py
implementations/rust/: Cargo.toml  README.md
implementations/rust/src/: app.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  remote_path.rs  transfer.rs  transport.rs  url.rs
implementations/rust/tests/: cli_help.rs
spec/: api-v1.md  cli-bootstrap-v1.md  cli-v1.md
spec/fixtures/: info-v1.json
tools/: conformance.py
(+1 files in other folders)
